Convert scripts to source env.sh, which is then used for end configuration.

--- a/README
+++ b/README
@@ -1,2 +1,5 @@
-Clone this into /services/medusa/bin, then link the svc_hooks subdirectory to
-/services/medusa/bin/svc_hooks.
+Clone this into $HOME/bin, then link the $HOME/svc_hooks subdirectory to
+$HOME/bin/svc_hooks.
+
+Everything that you might want to configure should be set in env.sh, which
+the other scripts source. If something isn't, it should be.
